--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,48 @@
 						<p><input type="text" placeholder="Найти лучший букет"></p>
 						<button></button>
 					</div>
-					<p class="basket"><a href="#">В корзине <strong>2</strong> товара на <strong>2600</strong> руб.</a></p>
+					<div class="basket">
+						<p><a href="#">В корзине <strong>2</strong> товара на <strong>2600</strong> руб.</a></p>
+						<div>
+							<div>
+								<table>
+									<tbody>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket1.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket2.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket3.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+									</tbody>
+								</table>
+								<button>Перейти в корзину</button>
+							</div>
+						</div>
+					</div>
 					<p class="phone">8 (3852) 456 456</p>
 				</div>
 				<ul class="menu">
@@ -39,8 +80,160 @@
 						<div>
 							<h3>Букеты</h3>
 							<ul>
-								<li><a href="#">Цветы</a></li>
-								<li><a href="#">Повод</a></li>
+								<li>
+									<a href="#">Цветы</a>
+									<div>
+										<div>
+											<ul>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon7.png" width="55" height="55" alt="">
+														</div>
+														<p>Герберы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon8.png" width="42" height="45" alt="">
+														</div>
+														<p>Тюльпаны</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon9.png" width="58" height="56" alt="">
+														</div>
+														<p>Лилии</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon8.png" width="42" height="45" alt="">
+														</div>
+														<p>Тюльпаны</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon7.png" width="55" height="55" alt="">
+														</div>
+														<p>Герберы</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon8.png" width="42" height="45" alt="">
+														</div>
+														<p>Тюльпаны</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon6.png" width="60" height="48" alt="">
+														</div>
+														<p>Розы</p>
+													</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<li>
+									<a href="#">Повод</a>
+									<div>
+										<div>
+											<ul>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon1.png" width="56" height="43" alt="">
+														</div>
+														<p>День Св.Валентина</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon2.png" width="56" height="43" alt="">
+														</div>
+														<p>Свадьба</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon3.png" width="48" height="51" alt="">
+														</div>
+														<p>8 марта</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon4.png" width="46" height="56" alt="">
+														</div>
+														<p>Торжество</p>
+													</a>
+												</li>
+												<li>
+													<a href="#">
+														<div>
+															<img src="./img/menu_sub_icon5.png" width="37" height="59" alt="">
+														</div>
+														<p>День рождения</p>
+													</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
 								<li><a href="#">Кому</a></li>
 								<li><a href="#">Цвет</a></li>
 							</ul>
@@ -78,19 +271,20 @@
 					</div>
 				</div>
 				<div class="rb">
+					<ul class="breadcrumbs">
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Букеты</a></li>
+						<li>Цветы</li>
+					</ul>
 					<div class="filter">
 						<p>Цена</p>
 						<div>
 							<div class="range"></div>
 							<div id="amount"></div>
 						</div>
-						<button>Сбросить фильтр</button>
+						<button class="submit">Отфильтровать</button>
+						<button class="clear">Сбросить фильтр</button>
 					</div>
-					<ul class="breadcrumbs">
-						<li><a href="#">Главная</a></li>
-						<li><a href="#">Букеты</a></li>
-						<li>Цветы</li>
-					</ul>
 					<div class="products">
 						<div>
 							<a href="#">
@@ -238,6 +432,13 @@
 			</ul>
 			<p class="author">Сделано в <a href="http://letsrock.pro" target="_blank">Let’s Rock</a></p>
 		</div>
+	</div>
+	<div class="fade"></div>
+	<div class="modal" id="callorder">
+		<h3>Оформить заказ по телефону</h3>
+		<p><input type="text" placeholder="Имя"></p>
+		<p><input type="text" placeholder="Телефон / email"></p>
+		<button>Отправить</button>
 	</div>
 </body>
 </html>
