--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,15 @@
 					<p class="phone">8 (3852) 456 456</p>
 				</div>
 				<ul class="menu">
-					<li class="active"><a href="#">Каталог</a></li>
+					<li><a href="#">Каталог</a></li>
 					<li><a href="#">Оплата и доставка</a></li>
 					<li><a href="#">Садово-флористический центр</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li class="active"><a href="#">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="content">
-			<div>		
+			<div>
 				<div class="lb">
 					<div class="nav">
 						<div>
@@ -252,130 +252,33 @@
 				<div class="rb">
 					<ul class="breadcrumbs">
 						<li><a href="#">Главная</a></li>
-						<li><a href="#">Букеты</a></li>
-						<li>Цветы</li>
+						<li>Контакты</li>
 					</ul>
-					<div class="item">
-						<div class="picture">
-							<img src="./pic/item.jpg" width="290" height="410" alt="">
+					<div class="contact">
+						<div>
+							<h1>Соцветие, садово-флористический центр</h1>
+							<h2><strong>Наш адрес:</strong> ул. Челюскинцев, 143</h2>
+							<h3><strong>8 (3852) 226 776</strong> (розничный отдел); <strong>8 913 244 2154</strong></h3>
 						</div>
-						<div class="information">
-							<h1>Венера</h1>
-							<p>Целая симфония искренних чувств в одном букете. Бархатный шёпот роз высших сортов расскажет получательнице о ваших желаниях, надеждах и чаяниях. Об обожании и долгих поцелуях.</p>
-							<h5><span><span>4650</span><em>p</em></span> 4650<em>p</em></h5>
-							<div class="buttons">
-								<button class="add">В корзину</button>
-								<button class="order">Быстрый заказ</button>
-							</div>
-							<div class="more">
-								<h3>Не забудьте про подарок:</h3>
-								<ul>
-									<li><a href="#pack1">Игрушки</a></li>
-									<li><a href="#pack2">Открытки</a></li>
-									<li><a href="#pack3">Фарфор</a></li>
-								</ul>
-								<div id="pack1">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more2.png" width="130" height="148" alt="">
-											</div>
-											<p>Зайка Ми<br> в розовой шапочке</p>
-										</a>
-										<h5>770<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
-								<div id="pack2">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more2.png" width="130" height="148" alt="">
-											</div>
-											<p>Зайка Ми<br> в розовой шапочке</p>
-										</a>
-										<h5>770<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
-								<div id="pack3">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
+						<div>
+							<p>Флористический центр</p>
+							<h4>Часы работы: пн-пт 7:30 до 21:00; сб-вс 8:00 до 20:00</h4>
+							<h5>flora@socvetie.info</h5>
+						</div>
+					</div>
+					<div class="feedback">
+						<div>
+							<div>
+								<h2>Обратная связь</h2>
+								<p><span>Имя</span> <input type="text"></p>
+								<p><span>Телефон / email</span> <input type="text"></p>
+								<p><span>Комментарий</span> <textarea cols="80" rows="3"></textarea></p>
+								<button>Отправить</button>
 							</div>
 						</div>
 					</div>
-					<div class="similar">
-						<h2>Похожие товары</h2>
-						<div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog6.jpg" width="197" height="197" alt="">
-									</div>
-									<p>Росписной</p>
-								</a>
-								<h5>4380<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog7.jpg" width="197" height="197" alt="">
-									</div>
-									<p>Букет Пионов</p>
-								</a>
-								<h5>4680<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog8.jpg" width="197" height="197" alt="">
-									</div>
-									<p>101 роза Крем</p>
-								</a>
-								<h5>9440<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
-						</div>
+					<div class="map">
+						<script type="text/javascript" charset="utf-8" src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=T0P4ci0IQ7DjeJ-88GshJyLB9d0HgR0m&width=710&height=217"></script>
 					</div>
 				</div>
 			</div>
@@ -398,6 +301,13 @@
 			</ul>
 			<p class="author">Сделано в <a href="http://letsrock.pro" target="_blank">Let’s Rock</a></p>
 		</div>
+	</div>
+	<div class="fade"></div>
+	<div class="modal" id="callorder">
+		<h3>Оформить заказ по телефону</h3>
+		<p><input type="text" placeholder="Имя"></p>
+		<p><input type="text" placeholder="Телефон / email"></p>
+		<button>Отправить</button>
 	</div>
 </body>
 </html>
