--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/easing.js"></script>
 	<script type="text/javascript" src="./js/slides.js"></script>
+	<script type="text/javascript" src="./js/uislider.js"></script>
 	<script type="text/javascript" src="./js/dynamic.js"></script>
 </head>
 <body>
@@ -20,7 +21,48 @@
 						<p><input type="text" placeholder="Найти лучший букет"></p>
 						<button></button>
 					</div>
-					<p class="basket"><a href="#">В корзине <strong>2</strong> товара на <strong>2600</strong> руб.</a></p>
+					<div class="basket">
+						<p><a href="#">В корзине <strong>2</strong> товара на <strong>2600</strong> руб.</a></p>
+						<div>
+							<div>
+								<table>
+									<tbody>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket1.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket2.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+										<tr>
+											<td>
+												<div>
+													<img src="./pic/quickbasket3.png" width="42" height="42" alt="">
+												</div>
+											</td>
+											<td><h5><a href="#">Цветущий остров</a></h5></td>
+											<td>Цена <strong>3160<em>p</em></strong></td>
+											<td>Количество: <span>1</span></td>
+										</tr>
+									</tbody>
+								</table>
+								<button>Перейти в корзину</button>
+							</div>
+						</div>
+					</div>
 					<p class="phone">8 (3852) 456 456</p>
 				</div>
 				<ul class="menu">
