--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
 					<p class="phone">8 (3852) 456 456</p>
 				</div>
 				<ul class="menu">
-					<li class="active"><a href="#">Каталог</a></li>
+					<li><a href="#">Каталог</a></li>
 					<li><a href="#">Оплата и доставка</a></li>
 					<li><a href="#">Садово-флористический центр</a></li>
 					<li><a href="#">Контакты</a></li>
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 		<div class="content">
-			<div>		
+			<div>
 				<div class="lb">
 					<div class="nav">
 						<div>
@@ -252,131 +252,49 @@
 				<div class="rb">
 					<ul class="breadcrumbs">
 						<li><a href="#">Главная</a></li>
-						<li><a href="#">Букеты</a></li>
-						<li>Цветы</li>
+						<li>Поиск</li>
 					</ul>
-					<div class="item">
-						<div class="picture">
-							<img src="./pic/item.jpg" width="290" height="410" alt="">
-						</div>
-						<div class="information">
-							<h1>Венера</h1>
-							<p>Целая симфония искренних чувств в одном букете. Бархатный шёпот роз высших сортов расскажет получательнице о ваших желаниях, надеждах и чаяниях. Об обожании и долгих поцелуях.</p>
-							<h5><span><span>4650</span><em>p</em></span> 4650<em>p</em></h5>
-							<div class="buttons">
-								<button class="add">В корзину</button>
-								<button class="order">Быстрый заказ</button>
-							</div>
-							<div class="more">
-								<h3>Не забудьте про подарок:</h3>
-								<ul>
-									<li><a href="#pack1">Игрушки</a></li>
-									<li><a href="#pack2">Открытки</a></li>
-									<li><a href="#pack3">Фарфор</a></li>
-								</ul>
-								<div id="pack1">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more2.png" width="130" height="148" alt="">
-											</div>
-											<p>Зайка Ми<br> в розовой шапочке</p>
-										</a>
-										<h5>770<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
-								<div id="pack2">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more2.png" width="130" height="148" alt="">
-											</div>
-											<p>Зайка Ми<br> в розовой шапочке</p>
-										</a>
-										<h5>770<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
-								<div id="pack3">
-									<div>
-										<a href="#">
-											<div>
-												<img src="./pic/more1.png" width="105" height="125" alt="">
-											</div>
-											<p>Мишка Тедди<br> Me to You</p>
-										</a>
-										<h5>800<em>o</em></h5>
-										<button>В корзину</button>
-									</div>
-								</div>
-							</div>
-						</div>
+					<div class="search">
+						<p><input type="text"> <button>Найти</button></p>
+						<h5>Найдено: 21</h5>
 					</div>
-					<div class="similar">
-						<h2>Похожие товары</h2>
+					<div class="result">
 						<div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog6.jpg" width="197" height="197" alt="">
-									</div>
-									<p>Росписной</p>
-								</a>
-								<h5>4380<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog7.jpg" width="197" height="197" alt="">
-									</div>
-									<p>Букет Пионов</p>
-								</a>
-								<h5>4680<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
-							<div>
-								<a href="#">
-									<div class="picture">
-										<img src="./pic/catalog8.jpg" width="197" height="197" alt="">
-									</div>
-									<p>101 роза Крем</p>
-								</a>
-								<h5>9440<em>p</em></h5>
-								<div class="buttons">
-									<button class="add">В корзину</button>
-									<button class="order">Быстрый заказ</button>
-								</div>
-							</div>
+							<h2><a href="#">Венера</a></h2>
+							<p>Целая симфония искренних чувств в одном букете. Бархатный шёпот роз высших сортов расскажет получательнице о ваших желаниях, надеждах и чаяниях. Об обожании и долгих поцелуях.</p>
+						</div>
+						<div>
+							<h2><a href="#">Мадрид</a></h2>
+							<p>Целая симфония искренних чувств в одном букете. Бархатный шёпот роз высших сортов расскажет получательнице о ваших желаниях, надеждах и чаяниях. Об обожании и долгих поцелуях.</p>
+						</div>
+						<div>
+							<h2><a href="#">Венера</a></h2>
+							<p>Целая симфония искренних чувств в одном букете. Бархатный шёпот роз высших сортов расскажет получательнице о ваших желаниях, надеждах и чаяниях. Об обожании и долгих поцелуях.</p>
+						</div>
+						<div>
+							<h2><a href="#">101 роза Малибу</a></h2>
+							<p>Для тех, кто не мыслит себя без красивых поступков и широких жестов, кто привык получать от жизни всё и добиваться любых поставленных целей, как бы труден не был к ним путь, букет из 101 розы с длинными (от 80 см) стеблями и потрясающим оттенком.</p>
+						</div>
+						<div>
+							<h2><a href="#">Ромео и Джульетта</a></h2>
+							<p>Помимо повести, печальнее которой нет на свете, самая горячая итальянская пара прославилась ещё и на жизнеутверждающем поприще искренней первой любви.</p>
+						</div>
+						<div>
+							<h2><a href="#">Ромео и Джульетта</a></h2>
+							<p>Помимо повести, печальнее которой нет на свете, самая горячая итальянская пара прославилась ещё и на жизнеутверждающем поприще искренней первой любви.</p>
+						</div>
+						<div>
+							<h2><a href="#">101 роза Малибу</a></h2>
+							<p>Для тех, кто не мыслит себя без красивых поступков и широких жестов, кто привык получать от жизни всё и добиваться любых поставленных целей, как бы труден не был к ним путь, букет из 101 розы с длинными (от 80 см) стеблями и потрясающим оттенком.</p>
 						</div>
 					</div>
+					<ul class="pagination">
+						<li>1</li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -398,6 +316,13 @@
 			</ul>
 			<p class="author">Сделано в <a href="http://letsrock.pro" target="_blank">Let’s Rock</a></p>
 		</div>
+	</div>
+	<div class="fade"></div>
+	<div class="modal" id="callorder">
+		<h3>Оформить заказ по телефону</h3>
+		<p><input type="text" placeholder="Имя"></p>
+		<p><input type="text" placeholder="Телефон / email"></p>
+		<button>Отправить</button>
 	</div>
 </body>
 </html>
