social icons + reviews page

--- a/basket.html
+++ b/basket.html
@@ -157,9 +157,9 @@
 			</ul>
 			<p class="copy">© 2014, Соцветие</p>
 			<ul class="social">
-				<li><a href="#"><img src="./img/vkontakte_icon.png" width="15" height="17" alt=""></a></li>
-				<li><a href="#"><img src="./img/facebook_icon.png" width="13" height="22" alt=""></a></li>
-				<li><a href="#"><img src="./img/twitter_icon.png" width="21" height="18" alt=""></a></li>
+				<li><a href="#" class="vkontakte"></a></li>
+				<li><a href="#" class="facebook"></a></li>
+				<li><a href="#" class="twitter"></a></li>
 			</ul>
 			<p class="author">Сделано в <a href="http://letsrock.pro" target="_blank">Let’s Rock</a></p>
 		</div>
