--- a/reviews.html
+++ b/reviews.html
@@ -252,34 +252,68 @@
 				<div class="rb">
 					<ul class="breadcrumbs">
 						<li><a href="#">Главная</a></li>
-						<li>Контакты</li>
+						<li>Отзывы</li>
 					</ul>
-					<div class="contact">
-						<div>
-							<h1>Соцветие, садово-флористический центр</h1>
-							<h2><strong>Наш адрес:</strong> ул. Челюскинцев, 143</h2>
-							<h3><strong>8 (3852) 226 776</strong> (розничный отдел); <strong>8 913 244 2154</strong></h3>
-						</div>
-						<div>
-							<p>Флористический центр</p>
-							<h4>Часы работы: пн-пт 7:30 до 21:00; сб-вс 8:00 до 20:00</h4>
-							<h5>flora@socvetie.info</h5>
-						</div>
-					</div>
-					<div class="feedback">
+					<h1>Отзывы</h1>
+					<div class="reviews">
 						<div>
 							<div>
-								<h2>Обратная связь</h2>
-								<p><span>Имя</span> <input type="text"></p>
-								<p><span>Телефон / email</span> <input type="text"></p>
-								<p><span>Комментарий</span> <textarea cols="80" rows="3"></textarea></p>
-								<button>Отправить</button>
+								<div>
+									<div>
+										<p>Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так</p>
+									</div>
+								</div>
 							</div>
+							<h5>Вадим</h5>
+						</div>
+						<div>
+							<div>
+								<div>
+									<div>
+										<p>Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так держать! Вы лучшие! Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так держать! Вы лучшие!</p>
+									</div>
+								</div>
+							</div>
+							<h5>Андрей</h5>
+						</div>
+						<div>
+							<div>
+								<div>
+									<div>
+										<p>Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так</p>
+									</div>
+								</div>
+							</div>
+							<h5>Вадим</h5>
+						</div>
+						<div>
+							<div>
+								<div>
+									<div>
+										<p>Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так держать! Вы лучшие! Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так держать! Вы лучшие!</p>
+									</div>
+								</div>
+							</div>
+							<h5>Андрей</h5>
+						</div>
+						<div>
+							<div>
+								<div>
+									<div>
+										<p>Огромное спасибо компании Доставка Цветов за доставленные розы моей девушке. Вы помогли мне восстановить отношения и помириться с ней! Она осталась очень довольна и приятно удивлена! Так</p>
+									</div>
+								</div>
+							</div>
+							<h5>Вадим</h5>
 						</div>
 					</div>
-					<div class="map">
-						<script type="text/javascript" charset="utf-8" src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=T0P4ci0IQ7DjeJ-88GshJyLB9d0HgR0m&width=710&height=217"></script>
-					</div>
+					<ul class="pagination">
+						<li>1</li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
