intro slider big link

--- a/index.html
+++ b/index.html
@@ -247,24 +247,28 @@
 					<div class="slider">
 						<div class="container">
 							<div>
-								<div>
+								<a href="#">
 									<div>
-										<h5>Спецпредложение</h5>
-										<h3>101 роза</h3>
-										<p><span>6000 рублей</span> 5000 рублей</p>
+										<div>
+											<h5>Спецпредложение</h5>
+											<h3>101 роза</h3>
+											<p><span>6000 рублей</span> 5000 рублей</p>
+										</div>
 									</div>
-								</div>
-								<img src="./pic/slide1.jpg" width="710" height="363" alt="">
+									<img src="./pic/slide1.jpg" width="710" height="363" alt="">
+								</a>
 							</div>
 							<div>
-								<div>
+								<a href="#">
 									<div>
-										<h5>Спецпредложение</h5>
-										<h3>101 роза</h3>
-										<p><span>6000 рублей</span> 5000 рублей</p>
+										<div>
+											<h5>Спецпредложение</h5>
+											<h3>101 роза</h3>
+											<p><span>6000 рублей</span> 5000 рублей</p>
+										</div>
 									</div>
-								</div>
-								<img src="./pic/slide2.jpg" width="710" height="363" alt="">
+									<img src="./pic/slide2.jpg" width="710" height="363" alt="">
+								</a>
 							</div>
 						</div>
 					</div>
