item page new block & drop menu new icons

--- a/item.html
+++ b/item.html
@@ -333,6 +333,32 @@
 							</div>
 						</div>
 					</div>
+					<ul class="benefits">
+						<li>
+							<div>
+								<img src="./img/benefit1_icon.png" width="48" height="50" alt="">
+							</div>
+							<span>Сопутствующие товары</span>
+						</li>
+						<li>
+							<div>
+								<img src="./img/benefit3_icon.png" width="33" height="47" alt="">
+							</div>
+							<span>Доставка 2 часа</span>
+						</li>
+						<li>
+							<div>
+								<img src="./img/benefit2_icon.png" width="47" height="49" alt="">
+							</div>
+							<span>Свежие цветы</span>
+						</li>
+						<li>
+							<div>
+								<img src="./img/benefit4_icon.png" width="58" height="20" alt="">
+							</div>
+							<span>Оплата пластиковыми картами</span>
+						</li>
+					</ul>
 					<div class="similar">
 						<h2>Похожие товары</h2>
 						<div>
